k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nav7-ai-deploy
  labels:
    app: nav7-ai
  namespace: sk-team-07   # 필요에 따라 네임스페이스 변경
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nav7-ai
  template:
    metadata:
      labels:
        app: nav7-ai
    spec:
      serviceAccountName: default
      containers:
        - name: nav7-ai


          image: amdp-registry.skala-ai.com/skala25a/sk-nav7-ai:1.0.0-8-7fd572fe9ff3
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
